--- a/package.json
+++ b/package.json
@@ -29,9 +29,8 @@
     "grunt-contrib-uglify": "^0.6.0",
     "grunt-karma": "^0.9.0",
     "jasmine-as-promised": "0.0.8",
-    "jasmine-core": "^2.1.3",
-    "karma": "^0.12.28",
-    "karma-jasmine": "^0.3.2",
+    "karma": "~0.12.0",
+    "karma-jasmine": "~0.1.0",
     "karma-phantomjs-launcher": "^0.1.4",
     "load-grunt-tasks": "^1.0.0"
   }
