--- a/bower.json
+++ b/bower.json
@@ -15,14 +15,14 @@
     "**/.*",
     "node_modules",
     "bower_components",
-    "components",
-    "test",
-    "tests"
+    "Gruntfile.js",
+    "karma.conf.js",
+    "test"
   ],
   "dependencies": {
-    "angular": "1.3"
+    "angular": "1.2"
   },
   "devDependencies": {
-    "angular-mocks": "1.3"
+    "angular-mocks": "1.2"
   }
 }
